Début du code sur le Projet Fil Rouge - Batman

--- a/index.html
+++ b/index.html
@@ -8,7 +8,73 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="index.html">
+                <img src="./Assets/Logos/logohome.png" alt="logohome">
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <--!La première section Partie du haut-->
+            <section>
+                <div>
+                    <p>Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre les criminels de Gotham City. Il est vengeur. Il est la nuit.</p>
+                    <h2>Il est Batman</h2>
+                </div>
+                <div>
+                    <a href="#">VOIR LE HEROS</a>
+                    <a href="#">LES ADVERSAIRES</a>
+                </div>
+                <img src="./Assets/Logos/flèche_down_header.png" alt="flèche_down_header">
+            </section>
+            <--!La deuxième section Batman au Cinéma-->
+                <section>
+                    <div>
+                        <h1>BATMAN AU CINÉMA</h1>
+                        <p>Le personnage de Batman est un super héros de l’univers de DC Comics. Il a été créé par le dessinateur Bob Kane et le scénariste Bill Finger et apparaît pour la première fois dans le comic book Detective Comics en 1939. Batman
+                            se différencie de Superman, alors héros majeur de DC, car il n’a aucun pouvoir. Il sera porté au cinema pour la première fois en 1943 par Lewis Wilson et bénéficiera de nombreux reboot, donnant l’occasion à de multiples acteurs
+                            d’interpréter l’homme chauve-souris. Voici les trois derniers :
+                        </p>
+                        <div>
+                            <figure><img src="./Assets/Illustrations/Bathome2.png" alt="Robert Pattinson 2022" title="Robert Pattinson (2022)">
+                                <figcaption>Robert Pattinson(2022)</figcaption>
+                            </figure>
+                            <div>
+                                <h3>Robert Pattinson</h3>
+                                <p>(2022)</p>
+                            </div>
+                        </div>
+                        <div>
+                            <figure><img src="./Assets/Illustrations/Bathome3.png" alt="Christian Bale 2006 - 2008 - 2012" title="Christian Bale (2006 - 2008 - 2012)">
+                                <figcaption>Christian Bale (2006 - 2008 - 2012)</figcaption>
+                            </figure>
+                            <div>
+                                <h3>Christian Bale</h3>
+                                <p>(2006 - 2008 - 2012)</p>
+                            </div>
+                        </div>
+                        <div>
+                            <figure><img src="./Assets/Illustrations/Bathome4.png" alt="Ben Affleck 20016- 2017/2020 – 2023" title="Ben Affleck 20016- 2017/2020 – 2023">
+                                <figcaption>Ben Affleck 20016- 2017/2020 – 2023</figcaption>
+                            </figure>
+                            <div>
+                                <h3>Ben Affleck</h3>
+                                <p>20016- 2017/2020 – 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
 
+                </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
